[project]
name = "grau"
version = "1.0.0"
dependencies = [
		"Werkzeug==2.0.3",
		"Flask==2.0.1",
		"Flask-SQLAlchemy-Session==1.1",
		"pydantic==2.0",
		"pydantic-extra-types==2.0.0",
		"phonenumbers==8.13.15",
		"email-validator==2.0.0.post2",
		"Flask-Cors==3.0.10",
		"Flask-Login==0.6.2",
		"cryptography==41.0.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["grau"]

[tool.black]
line-length = 79
target-version = ['py311']
